Avoid checking every node when setting upgrade target